// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`js-in-xxx > should format app.vue with full-config 1`] = `
"<script setup lang="ts">
  import a from "a";
  import m from "m";
  import z from "z";

  const count = ref(0);
</script>
<template>
  <div class="m-0 flex p-4">{{ count }}</div>
  <button class="m-2 flex p-1">Click</button>
  <p>Templates are formatted as well...</p>
</template>

<style>
  .and {
    css: too !important;
  }
</style>
"
`;

exports[`js-in-xxx > should format multi-script.vue with full-config 1`] = `
"<script lang="ts">
  import a from "a";
  import z from "z";

  export default { name: "App" };
</script>
<script setup lang="ts">
  import b from "b";
  import m from "m";

  const count = ref(0);
</script>
<template>
  <div>{{ count }}</div>
</template>
"
`;

exports[`js-in-xxx > should format no-imports.vue with full-config 1`] = `
"<!-- https://github.com/oxc-project/oxc/issues/20428 -->
<script lang="ts">
  let foo = "foo";

  let bar = "bar";
</script>
"
`;

exports[`js-in-xxx > should format test.md with full-config 1`] = `
"# Header

_Look,_ code blocks are formatted _too!_

\`\`\`js
function identity(x) {
  return x;
}
\`\`\`

\`\`\`jsx
<Button>Click</Button>
\`\`\`

\`\`\`ts
const a: string = "x";
\`\`\`

\`\`\`tsx
const X = () => (
  <>
    <P> ... </P>
  </>
);
\`\`\`

| Pilot    | Airport | Hours |
| -------- | :-----: | ----: |
| John Doe |   SKG   |  1338 |
| Jane Roe |   JFK   |   314 |

---

- List
- with a [link] (/to/somewhere)
- and [another one]

  [another one]: http://example.com "Example title"

Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Curabitur consectetur maximus risus, sed maximus tellus tincidunt et.
"
`;

exports[`js-in-xxx > should format test.mdx with full-config 1`] = `
"import { Baz } from "./Fixture";
import { Buz } from "./Fixture";

export const foo = {
  hi: \`Fudge \${Baz.displayName || "Baz"}\`,
  authors: ["fred", "sally"],
};

# Hello, world!

I'm an awesome paragraph.

<!-- I'm a comment -->

<Foo bg="red">
  <Bar>hi </Bar>
  {hello}
  {/* another comment */}
</Foo>

\`\`\`
test codeblock
\`\`\`

\`\`\`js
module.exports = "test";
\`\`\`

\`\`\`tsx
<>
  <div>Hello, world!</div>
</>
\`\`\`

\`\`\`sh
npm i -g foo
\`\`\`

| Test | Table |
| :--- | :---- |
| Col1 | Col2  |

export default ({ children }) => <div>{children}</div>;
"
`;
